# tbc_agent

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  pyproject.toml  tbc_agent_design_context.md
src/tbc_agent/: conversation_state.py  input_events.py  llm_interface.py  main.py  observability.py  orchestrator.py  output_channels.py  prompt_registry.py  tool_loader.py
src/tbc_agent/auth/: credential_store.py  google.py  oauth_client.py  oauth_registry.py
src/tbc_agent/tools/: AGENTS.md  current_time.py  google_drive.py
tests/: AGENTS.md  test_conversation_state.py  test_input_events.py  test_integration.py  test_llm_interface.py  test_orchestrator.py  test_output_channels.py  test_real_llm_integration.py  test_startup.py  test_tool_loader.py
tests/auth/: test_credential_store.py  test_google_credentials.py  test_oauth_client.py  test_oauth_device_flow_manual.py
tests/tools/: test_current_time.py  test_google_drive.py  test_google_drive_integration.py  test_google_drive_oauth.py
