[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tbc-agent"
version = "0.1.0"
description = "Context enrichment agent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
    "langfuse>=2.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "authlib>=1.3",
    "bitwarden-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests (slow, require external services)",
    "google_drive: Tests for google Drive integrations",
    "manual: Tests that require human interaction or real credentials",
]
addopts = "-m \"not integration\""

[tool.hatch.build.targets.wheel]
packages = ["src/tbc_agent"]
